--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.5.0"
+    "puppeteer": "^8.0.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
+    "sequelize": "^6.5.0",
+    "sequelize-auto": "^0.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
